--- a/budget.html
+++ b/budget.html
@@ -33,7 +33,7 @@
                     <li><a href="budget.html" class=" menu active">Rozpočet</a></li>
                     <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
                     <li><a href="attraction.html">Atrakce</a></li>
-                    <li><a href="zábava.html">Entertainment</a></li>
+                    <li><a href="entertainment.html">Zábava</a></li>
                     <li><a href="contact-us.html">Kontaktujte nás</a></li>
                     <li>
                         <div class="closed-menu">
@@ -288,7 +288,7 @@
                             <li><a href="budget.html">Rozpočet</a></li>
                             <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
                             <li><a href="attraction.html">Atrakce</a></li>
-                            <li><a href="zábava.html">Entertainment</a></li>
+                            <li><a href="entertainment.html">Zábava</a></li>
                             <li><a href="contact-us.html">Kontaktujte nás</a></li>
                         </ul>
                     </div>
