--- a/entertainment.html
+++ b/entertainment.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title>Atrakce</title>
+    <title>Zábava</title>
 </head>
 
 <body>
@@ -52,11 +52,11 @@
     <!-- site header end -->
 
     <!-- site banner start -->
-    <section class="attractionbanner">
+    <section class="entertainmentbanner">
         <div class="container">
             <div class="row">
                 <div class="home__title">
-                    <h1>Atrakce</h1>
+                    <h1>Zábava</h1>
                 </div>
             </div>
         </div>
@@ -64,13 +64,11 @@
     <!-- site banner end -->
 
     <!-- site homecard start -->
-    <section class="homecard attraction">
+    <section class="homecard entertainment">
         <div class="container">
             <div class="row">
                 <div class="homecard__text">
-                    <p>Ať už jste hrdý Čech, který prozkoumává svou vlast, nebo zvědavý cestovatel z ciziny, tento
-                        srovnávací průvodce vám pomůže odhalit poklady České republiky. Od historických měst po přírodní
-                        zázraky máme vaši dovolenou pokrytou. Pojďme společně vyrazit na tuto cestu! </p>
+                    <p>Pro váš nezapomenutelný zážitek plný vzrušení, luxusu a neomezené zábavy jsou tu kasino hotely! Pro české návštěvníky jsme připravili tento komplexní srovnávací průvodce, který vám pomůže najít nejlepší destinace, kde si můžete vychutnat hazardní hry a ubytování na jednom místě. Ať už jste začátečníkem nebo zkušeným hráčem, máme pro vás něco připraveno. Pojďte se společně podívat na nejlepší kasino hotely v České republice!</p>
                 </div>
             </div>
         </div>
@@ -78,7 +76,7 @@
     <!-- site homecard end -->
 
     <!-- site attractioncard start -->
-    <section class="attractioncard">
+    <section class="entertainmentcard">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
@@ -88,20 +86,26 @@
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
-                        <h3> Praha: Město Stovek Věží <br>Český Krumlov: Kouzelná Pohádka</h3>
-                        <p>  Praha: Česká metropole se může pyšnit skyline středověké a barokní architektury. Nesmíte vynechat ikonický Pražský hrad, Karlův most a Staroměstské náměstí s Orlojem. </p>
-                 <p> Český Krumlov: Malebný klenot v Jižních Čechách, Český Krumlov, nabízí pohádkovou atmosféru s UNESCO památkovým zámkem, klikatou Vltavou a malebným historickým centrem. </p>
+                        <h3>Casino Hotel Caro: Zábava a Relaxace v Karlových Varech </h3>
+                        <p>Kasino: Casino Hotel Caro v Karlových Varech nabízí kasino s bohatou nabídkou her a pravidelnými turnaji. </p>
+                  <p> Ubytování: Ubytování v tomto hotelu je spojené s luxusním wellness centrem a restaurací, což vám umožní zážitek plný odpočinku a relaxace. </p>
+                  <div class="hotel-btn">
+                    <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                        více</a>
+                </div>
                     </div>
                 </div>
             </div>
             <div class="row flex-wrap-reverse">
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
-                        <h3>Karlovy Vary: Elegance Lázní <br> Mariánské Lázně: Klidný Wellness</h3>
-                        <p>Karlovy Vary: Užijte si luxusní lázeňský zážitek, kdy budete pít minerální vody z velkolepých
-                            kolonád a obdivovat honosnou architekturu tohoto slavného lázeňského města v Čechách. </p>
-                        <p> Mariánské Lázně: Najděte klid v Mariánských Lázních, dalším lázeňském ráji známém pro své
-                            léčivé prameny, bujné parky a elegantní kolonády. </p>
+                        <h3>Casino Atrium Hilton Prague: Hazardní Zábava u Staroměstského Náměstí </h3>
+                        <p>Kasino: Toto kasino v centru Prahy v hotelu Hilton nabízí široký výběr her a turnajů pro náročné hráče. </p>
+                        <p> Ubytování: Máte k dispozici luxusní pokoje v blízkosti historických památek, jako je Staroměstské náměstí a Karlův most. </p>
+                        <div class="hotel-btn">
+                            <a href="https://www.hilton.com/en/hotels/prghitw-hilton-prague/?SEO_id=GMB-EMEA-T W-PRGHITW  ">Ukázat
+                                více</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-sm-12">
@@ -118,23 +122,28 @@
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
-                        <h3>České Budějovice: Domov Budvaru <br>Plzeň: Město Piva</h3>
-                        <p>České Budějovice: Vychutnejte si originální pivo Budweiser, vařené od roku 1895, a
-                            prozkoumejte historické centrum s impozantním Černou věží a malebným náměstím. </p>
-                        <p>Plzeň: Objevte místo narození piva Pilsner a navštivte pivovar Pilsner Urquell. Plzeň nabízí
-                            také bohatou kulturní scénu a výjimečnou gotickou a renesanční architekturu.</p>
-                    </div>
+                        <h3>Grandhotel Pupp: Historický Glamour a Kasino v Karlových Varech</h3>
+                        <p>Kasino: Grandhotel Pupp je známý svým elegantním kasinem, které hostí mezinárodní pokerové turnaje a nabízí klasické kasinové hry. 
+                        </p>
+                        <p>Ubytování: Ubytování v tomto historickém hotelu je zážitkem samým o sobě, a to v jednom z nejprestižnějších hotelů v Karlových Varech. </p>
+                            <div class="hotel-btn">
+                                <a href="https://www.pupp.cz/ ">Ukázat
+                                    více</a>
+                            </div>
+                        </div>
                 </div>
             </div>
             <div class="row flex-wrap-reverse">
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
-                        <h3>Kutná Hora: Stříbrná Historie<br>Telč: Renesanční Krása</h3>
-                        <p> Kutná Hora: Vstupte do středověké minulosti s působivým Sedleckým kostelem (Kostnice) a
-                            obdivujte gotickou krásu Kostela svaté Barbory. </p>
-                        <p>Telč: Procházejte se historickým centrem Telče zapsaným na seznamu UNESCO, proslulým svou
-                            barevnou renesanční architekturou a malebnými rybníky. </p>
-                    </div>
+                        <h3>Casino Admiral Kleopatra: Moderní Kasino na Pomezí Čech a Bavorska</h3>
+                        <p>Kasino: Casino Admiral Kleopatra je moderním a vzrušujícím kasinem na hranicích České republiky a Bavorska s širokým výběrem her.</p>
+                        <p>Ubytování: V okolí naleznete různé ubytovací možnosti, které vám umožní objevit krásy české krajiny. </p>
+                            <div class="hotel-btn">
+                                <a href="https://www.casinoadmiralpraha.cz/palladium ">Ukázat
+                                    více</a>
+                            </div>
+                        </div>
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
@@ -150,27 +159,30 @@
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
-                        <h3>České Švýcarsko: Přírodní Zázraky <br>Národní park Šumava: Nedotčená Divočina </h3>
-                        <p>České Švýcarsko: Hikejte mezi surreálními pískovcovými skalami Českého Švýcarska,
-                            prozkoumejte Pravčickou bránu a projížďejte na lodi po řece Labe.</p>
-                        <p>Národní park Šumava: Ponořte se do neposkvrněné přírody Šumavy, kde vás čekají hluboké lesy,
-                            ledovcová jezera a divoké hory, ideální pro nadšené turisty a milovníky přírody. </p>
+                        <h3>Casino Hotel Savannah: Hráčský Ráj v Západních Čechách </h3>
+                        <p>Kasino: Casino Hotel Savannah vždy připravuje speciální nabídky a turnaje pro své hosty. Vyzkoušejte štěstí na hracích automatech nebo u stolních her.</p>
+                        <p>Ubytování: Hotel Savannah vám nabízí pohodlné ubytování ve městě Mariánské Lázně, což je skvělý výchozí bod pro objevování krás Západních Čech. </p>
+                        <div class="hotel-btn">
+                            <a href="https://www.hotel-savannah.com/cz/kasino/ ">Ukázat
+                                více</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row flex-wrap-reverse">
-                <div class="col-lg-6  col-sm-12 equal">
+            <div class="row">
+                <div class="col-lg-12  col-sm-12 equal">
                     <div class="homemain__part">
-                        <h3>Brno: Moravská Elegance <br>Olomouc: Barokní Nádhera</h3>
-                        <p> Brno: Objevte bohatou kulturní scénu, ohromující hrad Špilberk a unikátní funkcionalistickou
-                            architekturu tohoto dynamického města na Moravě</p>
-                        <p>Olomouc: Obdivujte barokní krásu Olomouce s jejím slavným Sloupem Nejsvětější Trojice,
-                            Arcibiskupským palácem a orlojem v historickém centru města</p>
+                        <p>Pro všechny milovníky hazardních her a luxusu je Česká republika skvělou destinací. Tyto kasino hotely vám nabídnou nejen vzrušující hry, ale také komfortní ubytování a špičkový servis. Ať už si vyberete kasino v centru Prahy, v lázeňském městě nebo na pomezí krásné české krajiny, vaše dovolená bude plná vzrušení a zábavy. Buďte šťastní 
+                            a hodně štěstí na výhru! 
+                            </p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-12">
-                    <div class="homemain__picture">
-                        <img src="images/attractioncard6.jpg" class="img-fluid" alt="attractioncard6">
+            </div>
+            <div class="row">
+                <div class="col-lg-12  col-sm-12 equal">
+                    <div class="homemain__part">
+                        <h3>Kontaktujte nás</h3>
+                        <p>Že cestování znamená více než jen návštěvu nových míst; jde o vytváření nezapomenutelných okamžiků a budování spojení s lidmi a světem kolem nás. Naším cílem je inspirovat, informovat a pomoci vám plánovat váš další dobrodružný výlet, ať už je to sólový výlet s batohem po jihovýchodní Asii, romantický útěk na Amalfijské pobřeží nebo rodinná dovolená do kouzelného světa Disney. </p>
                     </div>
                 </div>
             </div>
@@ -183,10 +195,13 @@
         <div class="container">
             <div class="row">
                 <div class="end__content attraction">
-                    <p>Závěr: Ať už vás láká historie a architektura Prahy, klidná lázeňská města, pivní kultura
-                        Budějovic a Plzně nebo přírodní krásy Českého Švýcarska a Šumavy, Česká republika nabízí mnoho
-                        atrakcí, které vás okouzlí. Čeští návštěvníci i světoví cestovatelé, nechte tento průvodce být
-                        vaším kompasem, jak objevujete bohatou paletu zážitků, které na </p>
+                    <h2>Proč Vybrat Nás </h2>
+                    <p>Odbornost: Naše tým tvoří zkušení cestovatelé s vlastními zkušenostmi z destinací po celém světě. Prozkoumali jsme skryté poklady, prošli rušnými městy a putovali odlehlými stezkami, abychom vám přinesli nejlepší cestovatelské rady.
+                        Kompletní Průvodci: Od podrobných průvodců městy po tipy na balení, informace o vízech a bezpečnostní rady nabízíme komplexní zdroje, které vám pomohou udělat vaši cestu plynulou a bezstarostnou. 
+                        Osobní Doporučení: Každý cestovatel je jedinečný a to chápeme. Poskytujeme osobní doporučení, která odpovídají vašim zájmům, rozpočtu a stylu cestování. Komunita: Vytvořili jsme živou komunitu cestovatelů, kteří sdílí své zkušenosti, 
+                        poznatky a cestovatelské příběhy. Připojte se k naší komunitě a spojte se s podobně smýšlejícími dobrodruhy. 
+                        Udržitelnost: Zastáváme zodpovědné a udržitelné cestování. Naše články a tipy podporují ekologické praktiky, které pomáhají chránit planetu a její vzácné destinace. 
+                        </p>
                 </div>
             </div>
         </div>
