--- a/attraction.html
+++ b/attraction.html
@@ -89,8 +89,10 @@
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
                         <h3> Praha: Město Stovek Věží <br>Český Krumlov: Kouzelná Pohádka</h3>
-                        <p>  Praha: Česká metropole se může pyšnit skyline středověké a barokní architektury. Nesmíte vynechat ikonický Pražský hrad, Karlův most a Staroměstské náměstí s Orlojem. </p>
-                 <p> Český Krumlov: Malebný klenot v Jižních Čechách, Český Krumlov, nabízí pohádkovou atmosféru s UNESCO památkovým zámkem, klikatou Vltavou a malebným historickým centrem. </p>
+                        <p> Praha: Česká metropole se může pyšnit skyline středověké a barokní architektury. Nesmíte
+                            vynechat ikonický Pražský hrad, Karlův most a Staroměstské náměstí s Orlojem. </p>
+                        <p> Český Krumlov: Malebný klenot v Jižních Čechách, Český Krumlov, nabízí pohádkovou atmosféru
+                            s UNESCO památkovým zámkem, klikatou Vltavou a malebným historickým centrem. </p>
                     </div>
                 </div>
             </div>
