--- a/entertainment.html
+++ b/entertainment.html
@@ -68,7 +68,11 @@
         <div class="container">
             <div class="row">
                 <div class="homecard__text">
-                    <p>Pro váš nezapomenutelný zážitek plný vzrušení, luxusu a neomezené zábavy jsou tu kasino hotely! Pro české návštěvníky jsme připravili tento komplexní srovnávací průvodce, který vám pomůže najít nejlepší destinace, kde si můžete vychutnat hazardní hry a ubytování na jednom místě. Ať už jste začátečníkem nebo zkušeným hráčem, máme pro vás něco připraveno. Pojďte se společně podívat na nejlepší kasino hotely v České republice!</p>
+                    <p>Pro váš nezapomenutelný zážitek plný vzrušení, luxusu a neomezené zábavy jsou tu kasino hotely!
+                        Pro české návštěvníky jsme připravili tento komplexní srovnávací průvodce, který vám pomůže
+                        najít nejlepší destinace, kde si můžete vychutnat hazardní hry a ubytování na jednom místě. Ať
+                        už jste začátečníkem nebo zkušeným hráčem, máme pro vás něco připraveno. Pojďte se společně
+                        podívat na nejlepší kasino hotely v České republice!</p>
                 </div>
             </div>
         </div>
@@ -87,12 +91,14 @@
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
                         <h3>Casino Hotel Caro: Zábava a Relaxace v Karlových Varech </h3>
-                        <p>Kasino: Casino Hotel Caro v Karlových Varech nabízí kasino s bohatou nabídkou her a pravidelnými turnaji. </p>
-                  <p> Ubytování: Ubytování v tomto hotelu je spojené s luxusním wellness centrem a restaurací, což vám umožní zážitek plný odpočinku a relaxace. </p>
-                  <div class="hotel-btn">
-                    <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
-                        více</a>
-                </div>
+                        <p>Kasino: Casino Hotel Caro v Karlových Varech nabízí kasino s bohatou nabídkou her a
+                            pravidelnými turnaji. </p>
+                        <p> Ubytování: Ubytování v tomto hotelu je spojené s luxusním wellness centrem a restaurací, což
+                            vám umožní zážitek plný odpočinku a relaxace. </p>
+                        <div class="hotel-btn">
+                            <a href="https://be.hotels.com/de/ho419246/hotel-caro-bukarest-rumanien/ ">Ukázat
+                                více</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -100,10 +106,13 @@
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
                         <h3>Casino Atrium Hilton Prague: Hazardní Zábava u Staroměstského Náměstí </h3>
-                        <p>Kasino: Toto kasino v centru Prahy v hotelu Hilton nabízí široký výběr her a turnajů pro náročné hráče. </p>
-                        <p> Ubytování: Máte k dispozici luxusní pokoje v blízkosti historických památek, jako je Staroměstské náměstí a Karlův most. </p>
+                        <p>Kasino: Toto kasino v centru Prahy v hotelu Hilton nabízí široký výběr her a turnajů pro
+                            náročné hráče. </p>
+                        <p> Ubytování: Máte k dispozici luxusní pokoje v blízkosti historických památek, jako je
+                            Staroměstské náměstí a Karlův most. </p>
                         <div class="hotel-btn">
-                            <a href="https://www.hilton.com/en/hotels/prghitw-hilton-prague/?SEO_id=GMB-EMEA-T W-PRGHITW  ">Ukázat
+                            <a
+                                href="https://www.hilton.com/en/hotels/prghitw-hilton-prague/?SEO_id=GMB-EMEA-T W-PRGHITW  ">Ukázat
                                 více</a>
                         </div>
                     </div>
@@ -123,27 +132,31 @@
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
                         <h3>Grandhotel Pupp: Historický Glamour a Kasino v Karlových Varech</h3>
-                        <p>Kasino: Grandhotel Pupp je známý svým elegantním kasinem, které hostí mezinárodní pokerové turnaje a nabízí klasické kasinové hry. 
+                        <p>Kasino: Grandhotel Pupp je známý svým elegantním kasinem, které hostí mezinárodní pokerové
+                            turnaje a nabízí klasické kasinové hry.
                         </p>
-                        <p>Ubytování: Ubytování v tomto historickém hotelu je zážitkem samým o sobě, a to v jednom z nejprestižnějších hotelů v Karlových Varech. </p>
-                            <div class="hotel-btn">
-                                <a href="https://www.pupp.cz/ ">Ukázat
-                                    více</a>
-                            </div>
+                        <p>Ubytování: Ubytování v tomto historickém hotelu je zážitkem samým o sobě, a to v jednom z
+                            nejprestižnějších hotelů v Karlových Varech. </p>
+                        <div class="hotel-btn">
+                            <a href="https://www.pupp.cz/ ">Ukázat
+                                více</a>
                         </div>
+                    </div>
                 </div>
             </div>
             <div class="row flex-wrap-reverse">
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
                         <h3>Casino Admiral Kleopatra: Moderní Kasino na Pomezí Čech a Bavorska</h3>
-                        <p>Kasino: Casino Admiral Kleopatra je moderním a vzrušujícím kasinem na hranicích České republiky a Bavorska s širokým výběrem her.</p>
-                        <p>Ubytování: V okolí naleznete různé ubytovací možnosti, které vám umožní objevit krásy české krajiny. </p>
-                            <div class="hotel-btn">
-                                <a href="https://www.casinoadmiralpraha.cz/palladium ">Ukázat
-                                    více</a>
-                            </div>
+                        <p>Kasino: Casino Admiral Kleopatra je moderním a vzrušujícím kasinem na hranicích České
+                            republiky a Bavorska s širokým výběrem her.</p>
+                        <p>Ubytování: V okolí naleznete různé ubytovací možnosti, které vám umožní objevit krásy české
+                            krajiny. </p>
+                        <div class="hotel-btn">
+                            <a href="https://www.casinoadmiralpraha.cz/palladium ">Ukázat
+                                více</a>
                         </div>
+                    </div>
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
@@ -160,8 +173,10 @@
                 <div class="col-lg-6  col-sm-12 equal">
                     <div class="homemain__part">
                         <h3>Casino Hotel Savannah: Hráčský Ráj v Západních Čechách </h3>
-                        <p>Kasino: Casino Hotel Savannah vždy připravuje speciální nabídky a turnaje pro své hosty. Vyzkoušejte štěstí na hracích automatech nebo u stolních her.</p>
-                        <p>Ubytování: Hotel Savannah vám nabízí pohodlné ubytování ve městě Mariánské Lázně, což je skvělý výchozí bod pro objevování krás Západních Čech. </p>
+                        <p>Kasino: Casino Hotel Savannah vždy připravuje speciální nabídky a turnaje pro své hosty.
+                            Vyzkoušejte štěstí na hracích automatech nebo u stolních her.</p>
+                        <p>Ubytování: Hotel Savannah vám nabízí pohodlné ubytování ve městě Mariánské Lázně, což je
+                            skvělý výchozí bod pro objevování krás Západních Čech. </p>
                         <div class="hotel-btn">
                             <a href="https://www.hotel-savannah.com/cz/kasino/ ">Ukázat
                                 více</a>
@@ -172,9 +187,12 @@
             <div class="row">
                 <div class="col-lg-12  col-sm-12 equal">
                     <div class="homemain__part">
-                        <p>Pro všechny milovníky hazardních her a luxusu je Česká republika skvělou destinací. Tyto kasino hotely vám nabídnou nejen vzrušující hry, ale také komfortní ubytování a špičkový servis. Ať už si vyberete kasino v centru Prahy, v lázeňském městě nebo na pomezí krásné české krajiny, vaše dovolená bude plná vzrušení a zábavy. Buďte šťastní 
-                            a hodně štěstí na výhru! 
-                            </p>
+                        <p>Pro všechny milovníky hazardních her a luxusu je Česká republika skvělou destinací. Tyto
+                            kasino hotely vám nabídnou nejen vzrušující hry, ale také komfortní ubytování a špičkový
+                            servis. Ať už si vyberete kasino v centru Prahy, v lázeňském městě nebo na pomezí krásné
+                            české krajiny, vaše dovolená bude plná vzrušení a zábavy. Buďte šťastní
+                            a hodně štěstí na výhru!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -182,7 +200,11 @@
                 <div class="col-lg-12  col-sm-12 equal">
                     <div class="homemain__part">
                         <h3>Kontaktujte nás</h3>
-                        <p>Že cestování znamená více než jen návštěvu nových míst; jde o vytváření nezapomenutelných okamžiků a budování spojení s lidmi a světem kolem nás. Naším cílem je inspirovat, informovat a pomoci vám plánovat váš další dobrodružný výlet, ať už je to sólový výlet s batohem po jihovýchodní Asii, romantický útěk na Amalfijské pobřeží nebo rodinná dovolená do kouzelného světa Disney. </p>
+                        <p>Že cestování znamená více než jen návštěvu nových míst; jde o vytváření nezapomenutelných
+                            okamžiků a budování spojení s lidmi a světem kolem nás. Naším cílem je inspirovat,
+                            informovat a pomoci vám plánovat váš další dobrodružný výlet, ať už je to sólový výlet s
+                            batohem po jihovýchodní Asii, romantický útěk na Amalfijské pobřeží nebo rodinná dovolená do
+                            kouzelného světa Disney. </p>
                     </div>
                 </div>
             </div>
@@ -196,12 +218,20 @@
             <div class="row">
                 <div class="end__content attraction">
                     <h2>Proč Vybrat Nás </h2>
-                    <p>Odbornost: Naše tým tvoří zkušení cestovatelé s vlastními zkušenostmi z destinací po celém světě. Prozkoumali jsme skryté poklady, prošli rušnými městy a putovali odlehlými stezkami, abychom vám přinesli nejlepší cestovatelské rady.
-                        Kompletní Průvodci: Od podrobných průvodců městy po tipy na balení, informace o vízech a bezpečnostní rady nabízíme komplexní zdroje, které vám pomohou udělat vaši cestu plynulou a bezstarostnou. 
-                        Osobní Doporučení: Každý cestovatel je jedinečný a to chápeme. Poskytujeme osobní doporučení, která odpovídají vašim zájmům, rozpočtu a stylu cestování. Komunita: Vytvořili jsme živou komunitu cestovatelů, kteří sdílí své zkušenosti, 
-                        poznatky a cestovatelské příběhy. Připojte se k naší komunitě a spojte se s podobně smýšlejícími dobrodruhy. 
-                        Udržitelnost: Zastáváme zodpovědné a udržitelné cestování. Naše články a tipy podporují ekologické praktiky, které pomáhají chránit planetu a její vzácné destinace. 
-                        </p>
+                    <p>Odbornost: Naše tým tvoří zkušení cestovatelé s vlastními zkušenostmi z destinací po celém světě.
+                        Prozkoumali jsme skryté poklady, prošli rušnými městy a putovali odlehlými stezkami, abychom vám
+                        přinesli nejlepší cestovatelské rady.
+                        Kompletní Průvodci: Od podrobných průvodců městy po tipy na balení, informace o vízech a
+                        bezpečnostní rady nabízíme komplexní zdroje, které vám pomohou udělat vaši cestu plynulou a
+                        bezstarostnou.
+                        Osobní Doporučení: Každý cestovatel je jedinečný a to chápeme. Poskytujeme osobní doporučení,
+                        která odpovídají vašim zájmům, rozpočtu a stylu cestování. Komunita: Vytvořili jsme živou
+                        komunitu cestovatelů, kteří sdílí své zkušenosti,
+                        poznatky a cestovatelské příběhy. Připojte se k naší komunitě a spojte se s podobně smýšlejícími
+                        dobrodruhy.
+                        Udržitelnost: Zastáváme zodpovědné a udržitelné cestování. Naše články a tipy podporují
+                        ekologické praktiky, které pomáhají chránit planetu a její vzácné destinace.
+                    </p>
                 </div>
             </div>
         </div>
