--- a/entertainment.html
+++ b/entertainment.html
@@ -32,8 +32,8 @@
                     <li><a href="hotels.html">Hotely</a></li>
                     <li><a href="budget.html">Rozpočet</a></li>
                     <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
-                    <li><a href="attraction.html" class=" menu active">Atrakce</a></li>
-                    <li><a href="entertainment.html">Zábava</a></li>
+                    <li><a href="attraction.html">Atrakce</a></li>
+                    <li><a href="entertainment.html" class=" menu active">Zábava</a></li>
                     <li><a href="contact-us.html">Kontaktujte nás</a></li>
                     <li>
                         <div class="closed-menu">
@@ -186,7 +186,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12  col-sm-12 equal">
-                    <div class="homemain__part">
+                    <div class="homemain__part entertainment">
                         <p>Pro všechny milovníky hazardních her a luxusu je Česká republika skvělou destinací. Tyto
                             kasino hotely vám nabídnou nejen vzrušující hry, ale také komfortní ubytování a špičkový
                             servis. Ať už si vyberete kasino v centru Prahy, v lázeňském městě nebo na pomezí krásné
@@ -198,7 +198,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12  col-sm-12 equal">
-                    <div class="homemain__part">
+                    <div class="homemain__part entertainment">
                         <h3>Kontaktujte nás</h3>
                         <p>Že cestování znamená více než jen návštěvu nových míst; jde o vytváření nezapomenutelných
                             okamžiků a budování spojení s lidmi a světem kolem nás. Naším cílem je inspirovat,
