--- a/entertainment.html
+++ b/entertainment.html
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/attractioncard1.jpg" class="img-fluid" alt="attractioncard1">
+                        <img src="images/entertainmentcard1.jpg" class="img-fluid" alt="entertainmentcard1">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
@@ -119,14 +119,14 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/attractioncard2.jpg" class="img-fluid" alt="attractioncard2">
+                        <img src="images/entertainmentcard2.jpg" class="img-fluid" alt="entertainmentcard2">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/attractioncard3.jpg" class="img-fluid" alt="attractioncard3">
+                        <img src="images/entertainmentcard3.jpg" class="img-fluid" alt="attractioncard3">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
@@ -160,14 +160,14 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/attractioncard4.jpg" class="img-fluid" alt="attractioncard4">
+                        <img src="images/entertainmentcard4.jpg" class="img-fluid" alt="entertainmentcard4">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/attractioncard5.jpg" class="img-fluid" alt="attractioncard5">
+                        <img src="images/entertainmentcard5.jpg" class="img-fluid" alt="entertainmentcard5">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
