--- a/entertainment.html
+++ b/entertainment.html
@@ -23,7 +23,8 @@
     <header class="site-header">
         <div class="container">
             <div class="site-logo">
-                <a href="index.html"><img src="images/header-logo.png" alt="site-logo"></a>
+                <a href="index.html"><img src="images/header-logo.png" alt="site-logo" class="logowhite"></a>
+                <a href="index.html"><img src="images/header-logo1.png" alt="site-logo" class="logoblue"></a>
             </div>
 
             <nav class="site-nav">
