--- a/entertainment.html
+++ b/entertainment.html
@@ -23,8 +23,7 @@
     <header class="site-header">
         <div class="container">
             <div class="site-logo">
-                <a href="index.html"><img src="images/header-logo.png" alt="site-logo" class="logowhite"></a>
-                <a href="index.html"><img src="images/header-logo1.png" alt="site-logo" class="logoblue"></a>
+                <a href="index.html"><img src="images/header-logo.png" alt="site-logo"></a>
             </div>
 
             <nav class="site-nav">
@@ -244,6 +243,9 @@
         <div class="container">
             <div class="row">
                 <div class=" col-lg-4 col-md-4 col-sm-12">
+                    <div class="site-logo">
+                        <img src="images/header-logo.png" class="img-fluid" alt="header-logo">
+                    </div>
                     <div class="footer__social">
                         <ul>
                             <li><a href="https://www.facebook.com/login/" target="_blank"><i
