--- a/hotels.html
+++ b/hotels.html
@@ -271,6 +271,9 @@
         <div class="container">
             <div class="row">
                 <div class=" col-lg-4 col-md-4 col-sm-12">
+                    <div class="site-logo">
+                        <img src="images/header-logo.png" class="img-fluid" alt="header-logo">
+                    </div>
                     <div class="footer__social">
                         <ul>
                             <li><a href="https://www.facebook.com/login/" target="_blank"><i
