--- a/contact-us.html
+++ b/contact-us.html
@@ -52,11 +52,11 @@
     <!-- site header end -->
 
     <!-- site banner start -->
-    <section class="entertainmentbanner">
+    <section class="contactbanner">
         <div class="container">
             <div class="row">
                 <div class="home__title">
-                    <h1>Zábava</h1>
+                    <h1>Kontaktujte nás</h1>
                 </div>
             </div>
         </div>
