--- a/contact-us.html
+++ b/contact-us.html
@@ -63,9 +63,43 @@
     </section>
     <!-- site banner end -->
 
- 
+    <!-- site contacttext start -->
+    <section class="contacttext">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-sm-12">
+                    <div class="contactpart">
+                        <h3>Kontaktujte nás</h3>
+                        <p>Rádi slyšíme od dalších cestovatelů! Pokud máte nějaké otázky, potřebujete rady nebo chcete
+                            sdílet své cestovatelské zážitky, neváhejte nás kontaktovat. Vaše zpětná vazba a příběhy nás
+                            inspirují a inspirují celou cestovatelskou komunitu. </p>
+                        <ul>
+                            <li><span>E-mail: </span>zpětnávazba@objevteprvní.com </li>
+                            <li><span>Address: </span>Opero s.r.o. </li>
+                            <li>Salvátorská 931/8</li>
+                            <li>110 00, Praha 1 </li>
+                            <li><span>Phone: </span>+420 777 167 376</li>
+                        </ul>
+                        <div class="contact__info">
+                            <h3>Cookies*** </h3>
+                            <p>Tento web používá soubory cookie</p>
+                            <p>Soubory cookies can be personalized and advertised, providing social media and analytical
+                                information. Informace or vašem používání našich stránek také sdílíme s našimi partnery
+                                v oblasti sociálních médií, advertising in analýzy, kteří je mohou kombinovat s dalšími
+                                informacemi, které jste jim poskytli nebo které shromáždili při va šem používání jejich
+                                služeb.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-   
+    <!-- site contacttext end -->
+
+
+
+
 
     <!-- site footer start -->
     <div class="footer">
