--- a/attraction.html
+++ b/attraction.html
@@ -227,6 +227,8 @@
                             <li><a href="attraction.html">Atrakce</a></li>
                             <li><a href="entertainment.html">Zábava</a></li>
                             <li><a href="contact-us.html">Kontaktujte nás</a></li>
+                            <li><a href="privacy.html">Zásady ochrany </a></li>
+                            <li><a href="terms-conditions.html">Podmínky Objevte </a></li>
                         </ul>
                     </div>
                 </div>
