--- a/local-cuisine.html
+++ b/local-cuisine.html
@@ -247,7 +247,8 @@
                             <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
                             <li><a href="attraction.html">Atrakce</a></li>
                             <li><a href="zábava.html">Entertainment</a></li>
-                            <li><a href="contact-us.html">Kontaktujte nás</a></li>
+                            <li><a href="privacy.html">Zásady ochrany </a></li>
+                            <li><a href="terms-conditions.html">Podmínky Objevte </a></li>
                         </ul>
                     </div>
                 </div>
