--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title>Kontaktujte nás</title>
+    <title>Soukromí</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
                     <li><a href="local-cuisine.html">Místní Kuchyně</a></li>
                     <li><a href="attraction.html">Atrakce</a></li>
                     <li><a href="entertainment.html">Zábava</a></li>
-                    <li><a href="contact-us.html" class=" menu active">Kontaktujte nás</a></li>
+                    <li><a href="contact-us.html">Kontaktujte nás</a></li>
                     <li>
                         <div class="closed-menu">
                             <a href="#">×</a>
