--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <title>Soukromí</title>
+    <title>Zásady ochrany</title>
 </head>
 
 <body>
@@ -52,11 +52,11 @@
     <!-- site header end -->
 
     <!-- site banner start -->
-    <section class="contactbanner">
+    <section class="privacybanner">
         <div class="container">
             <div class="row">
                 <div class="home__title">
-                    <h1>Kontaktujte nás</h1>
+                    <h1>Zásady ochrany</h1>
                 </div>
             </div>
         </div>
@@ -69,25 +69,127 @@
             <div class="row">
                 <div class="col-lg-12 col-sm-12">
                     <div class="contactpart">
-                        <h3>Kontaktujte nás</h3>
-                        <p>Rádi slyšíme od dalších cestovatelů! Pokud máte nějaké otázky, potřebujete rady nebo chcete
-                            sdílet své cestovatelské zážitky, neváhejte nás kontaktovat. Vaše zpětná vazba a příběhy nás
-                            inspirují a inspirují celou cestovatelskou komunitu. </p>
-                        <ul>
-                            <li><span>E-mail: </span>zpětnávazba@objevteprvní.com </li>
-                            <li><span>Address: </span>Opero s.r.o. </li>
-                            <li>Salvátorská 931/8</li>
-                            <li>110 00, Praha 1 </li>
-                            <li><span>Phone: </span>+420 777 167 376</li>
-                        </ul>
+                        <h3>Zásady ochrany osobních údajů pro Objevte jako první</h3>
+                        <p>Na Objevte jako první, dostupném z www.objevtejakoprvní.com, je jednou z našich hlavních
+                            priorit soukromí našich návštěvníků. Tento dokument Zásady ochrany osobních údajů obsahuje
+                            typy informací, které Objevte jako první shromažďuje a zaznamenává, a jak je používáme.</p>
                         <div class="contact__info">
-                            <h3>Cookies*** </h3>
-                            <p>Tento web používá soubory cookie</p>
-                            <p>Soubory cookies can be personalized and advertised, providing social media and analytical
-                                information. Informace or vašem používání našich stránek také sdílíme s našimi partnery
-                                v oblasti sociálních médií, advertising in analýzy, kteří je mohou kombinovat s dalšími
-                                informacemi, které jste jim poskytli nebo které shromáždili při va šem používání jejich
-                                služeb.</p>
+                            <p>Pokud máte další otázky nebo požadujete více informací o našich Zásadách ochrany osobních
+                                údajů, neváhejte nás kontaktovat. </p>
+                            <p>Tyto Zásady ochrany osobních údajů se vztahují pouze na naše online aktivity a jsou
+                                platné pro návštěvníky našich webových stránek s ohledem na informace, které sdíleli
+                                a/nebo sbírali v Objevte jako první. Tyto zásady se nevztahují na žádné informace
+                                shromážděné offline nebo prostřednictvím jiných kanálů, než je tento web. </p>
+                            <h4>Souhlas</h4>
+                            <p>Používáním našich webových stránek souhlasíte s našimi Zásadami ochrany osobních údajů a
+                                souhlasíte s jejich podmínkami. </p>
+                            <h4>Informace, které shromažďujeme</h4>
+                            <p>Osobní údaje, o jejichž poskytnutí jste požádáni, a důvody, proč jste o jejich poskytnutí
+                                požádáni, vám budou vysvětleny v okamžiku, kdy vás požádáme o poskytnutí vašich osobních
+                                údajů.</p>
+                            <p>Pokud nás kontaktujete přímo, můžeme o vás obdržet další informace, jako je vaše jméno,
+                                e-mailová adresa, telefonní číslo, obsah zprávy a/nebo přílohy, které nám můžete poslat,
+                                a jakékoli další informace, které se rozhodnete poskytnout. </p>
+                            <p>Když si zaregistrujete Účet, můžeme vás požádat o kontaktní údaje, včetně položek, jako
+                                je jméno, název společnosti, adresa, e-mailová adresa a telefonní číslo. </p>
+                            <h4>Jak používáme vaše informace</h4>
+                            <p>Údaje, které shromažďujeme, používáme různými způsoby, včetně:</p>
+                            <ul>
+                                <li>Poskytovat, provozovat a udržovat naše webové stránky</li>
+                                <li>Vylepšete, personalizujte a rozšiřte naše webové stránky </li>
+                                <li>Pochopte a analyzujte, jak používáte naše webové stránky</li>
+                                <li>Vyvíjet nové produkty, služby, funkce a funkce </li>
+                            </ul>
+                            <p>Komunikovat s vámi, buď přímo, nebo prostřednictvím některého z našich partnerů, včetně
+                                zákaznických služeb, abychom vám poskytli aktualizace a další informace týkající se
+                                webových stránek a pro marketingové a propagační účely </p>
+                            <h4>Posílejte vám e-maily</h4>
+                            <h4>Najít a zabránit podvodům </h4>
+                            <p>Záznam souborů </p>
+                            <p>Objevte jako první se řídí standardním postupem používání log souborů. Tyto soubory
+                                zaznamenávají návštěvníky, když navštíví webové stránky. Všechny hostingové společnosti
+                                to dělají a jsou součástí analýzy hostingových služeb. Informace shromážděné
+                                protokolovými soubory zahrnují adresy internetového protokolu (IP), typ prohlížeče,
+                                poskytovatele internetových služeb (ISP), datum a časové razítko, odkazující/výstupní
+                                stránky a případně počet kliknutí. Tyto nejsou spojeny s žádnými informacemi, které jsou
+                                osobně identifikovatelné. Účelem informací je analyzovat trendy, spravovat web, sledovat
+                                pohyb uživatelů na webu a shromažďovat demografické informace.</p>
+                            <h4>Soubory cookie a webové majáky </h4>
+                            <p>Jako každá jiná webová stránka používá Objevte jako první „cookies“. Tyto soubory cookie
+                                se používají k ukládání informací včetně preferencí návštěvníků a stránek na webu, které
+                                návštěvník navštívil nebo je navštívil. Tyto informace se používají k optimalizaci
+                                uživatelského zážitku přizpůsobením obsahu naší webové stránky na základě typu
+                                prohlížeče návštěvníků a/nebo jiných informací.</p>
+                            <h4>Zásady ochrany osobních údajů reklamních partnerů </h4>
+                            <p>V tomto seznamu můžete najít Zásady ochrany osobních údajů pro každého z reklamních
+                                partnerů Objevte jako první.</p>
+                            <p>Reklamní servery nebo reklamní sítě třetích stran používají technologie, jako jsou
+                                soubory cookie, JavaScript nebo Web Beacons, které se používají v jejich příslušných
+                                reklamách a odkazech, které se objevují na Objevte jako první, které jsou odesílány
+                                přímo do prohlížeče uživatelů. Když k tomu dojde, automaticky obdrží vaši IP adresu.
+                                Tyto technologie se používají k měření účinnosti jejich reklamních kampaní a/nebo k
+                                personalizaci reklamního obsahu, který vidíte na webových stránkách, které navštěvujete.
+                            </p>
+                            <p>Upozorňujeme, že Objevte jako první nemá žádný přístup ani kontrolu nad těmito soubory
+                                cookie, které používají inzerenti třetích stran. </p>
+                            <h4>Zásady ochrany osobních údajů třetích stran </h4>
+                            <p>Zásady ochrany osobních údajů společnosti Objevte jako první se nevztahují na jiné
+                                inzerenty nebo webové stránky. Proto vám doporučujeme, abyste si pro podrobnější
+                                informace prostudovali příslušné Zásady ochrany osobních údajů těchto reklamních
+                                serverů třetích stran. Může zahrnovat jejich postupy a pokyny, jak se odhlásit z
+                                určitých možností.</p>
+                            <p>Soubory cookie můžete zakázat prostřednictvím jednotlivých možností prohlížeče. Chcete-li
+                                získat podrobnější informace o správě souborů cookie pomocí konkrétních webových
+                                prohlížečů, naleznete je na příslušných webových stránkách těchto prohlížečů.</p>
+                            <p>Práva na ochranu osobních údajů CCPA (Neprodávejte mé osobní údaje) </p>
+                            <p>Podle zákona CCPA mají spotřebitelé v Kalifornii kromě jiných práv </p>
+                            <h4>právo:</h4>
+                            <p>Požadovat, aby podnik, který shromažďuje osobní údaje spotřebitelů,
+                                zveřejnil kategorie a konkrétní části osobních údajů, které podnik o spotřebitelích
+                                shromáždil. </p>
+                            <p>Požadovat, aby podnik, který prodává osobní údaje spotřebitele, neprodával osobní údaje
+                                spotřebitele. </p>
+                            <p>Pokud podáte žádost, máme jeden měsíc na to, abychom vám odpověděli. Pokud budete chtít
+                                některého z těchto práv využít, kontaktujte nás. </p>
+                            <p>Práva na ochranu osobních údajů GDPR </p>
+                            <h4>Rádi bychom se ujistili, že jste si plně vědomi všech svých práv na ochranu údajů. Každý
+                                uživatel má nárok na následující: </h4>
+                            <p>Právo na přístup – Máte právo požadovat kopie svých osobních údajů. Za tuto službu vám
+                                můžeme účtovat malý poplatek. </p>
+                            <p>Právo na opravu – Máte právo požadovat, abychom opravili jakékoli informace, o kterých se
+                                domníváte, že jsou nepřesné. Máte také právo požadovat, abychom doplnili informace, o
+                                kterých se domníváte, že jsou neúplné. </p>
+                            <p>Právo na výmaz – Máte právo požadovat, abychom za určitých podmínek vymazali vaše osobní
+                                údaje. </p>
+                            <p>Právo na omezení zpracování – Máte právo požadovat, abychom za určitých podmínek omezili
+                                zpracování vašich osobních údajů.
+                            </p>
+                            <p>Právo vznést námitku proti zpracování – za určitých podmínek máte právo vznést námitku
+                                proti našemu zpracování vašich osobních údajů. </p>
+                            <p>Právo na přenositelnost údajů – Máte právo požadovat, abychom za určitých podmínek
+                                předali údaje, které jsme shromáždili, jiné organizaci nebo přímo vám. </p>
+                            <p>Pokud podáte žádost, máme jeden měsíc na to, abychom vám odpověděli. Pokud budete chtít
+                                některého z těchto práv využít, kontaktujte nás. </p>
+                            <h4>Informace pro děti</h4>
+                            <p>Další součástí naší priority je přidání ochrany dětí při používání internetu. Vyzýváme
+                                rodiče a opatrovníky, aby sledovali, účastnili se a/nebo sledovali a řídili svou online
+                                aktivitu. </p>
+                            <p>Objevte jako první vědomě neshromažďuje žádné osobní údaje od dětí mladších 13 let. Pokud
+                                se domníváte, že vaše dítě poskytlo tento druh informací na našich webových stránkách,
+                                důrazně vám doporučujeme, abyste nás okamžitě kontaktovali a my uděláme vše pro to,
+                                abychom neprodleně odstranit takové informace z našich záznamů.</p>
+                            <h4>Změny těchto zásad ochrany osobních údajů </h4>
+                            <p>Naše Zásady ochrany osobních údajů můžeme čas od času aktualizovat. Proto vám
+                                doporučujeme, abyste na této stránce pravidelně kontrolovali jakékoli změny. O
+                                jakýchkoli změnách vás budeme informovat zveřejněním nových Zásad ochrany
+                                osobních údajů na této stránce. Tyto změny jsou účinné okamžitě po jejich zveřejnění na
+                                této stránce.
+                            </p>
+                            <p>Naše zásady ochrany osobních údajů byly vytvořeny pomocí generátoru zásad ochrany
+                                osobních údajů. </p>
+                            <h4>Kontaktujte nás</h4>
+                            <p>Máte-li jakékoli dotazy nebo návrhy týkající se našich Zásad ochrany osobních údajů,
+                                neváhejte nás kontaktovat. </p>
                         </div>
                     </div>
                 </div>
