--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -52,7 +52,7 @@
     <!-- site header end -->
 
     <!-- site banner start -->
-    <section class="privacybanner">
+    <section class="termsbanner">
         <div class="container">
             <div class="row">
                 <div class="home__title">
